# CryptoPipe

./: .gitignore  Cargo.toml  README.md  Stream Format.md  build.rs
src/: cli.rs  constants.rs  crypto.rs  crypto_stream.rs  error.rs  help.txt  io.rs  io_processor.rs  io_runloop.rs  kdf.rs  libsodium.rs  main.rs  stream.rs
src/crypto/: auth_enc.rs  kdf.rs  libsodium.rs  mod.rs  pbkdf.rs
src/tests/: memory_io.rs  mod.rs  predefined_stream.pbkdf_info  test_invalid_streams.rs  test_predefined_stream.rs  test_random_streams.rs
src/texts/: help.txt  licenses.txt
