[package]
name = "crypto_pipe"
version = "0.4.1"
authors = ["KizzyCode Software Labs./Keziah Biermann"]
build = "build.rs"

[dependencies]
asn1_der = { git = "https://github.com/KizzyCode/asn1_der" }
etrace = { git = "https://github.com/KizzyCode/etrace" }
cli = { git = "https://github.com/KizzyCode/cli" }